# animation-studio

./: README.md  items.py  main.py  my_gl_widget.py  pyproject.toml
loader/: obj_loader.py
shaders/: fragment_shader.glsl  phong.frag  phong.vert  vertex_shader.glsl
utils/: camera.py  cube.py  frame.py  styles.py
