[project]
name = "program-do-animacji"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandra Michalska, Julian Mossakowski, Marcin Bagnowski, Julia Czyżewska"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyopengl (>=3.1.9,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyqt5-stubs = "^5.15.6.0"

[tool.pyright]
reportIncompatibleMethodOverride = "none"